@@ -1,3 +1,7 @@
+2008-06-06  higepon  <higepon@users.sourceforge.jp>
+
+        * example/grass.scm (make-app): Added Grass interpreter.
+
 2008-06-03  higepon  <higepon@users.sourceforge.jp>
 
         * test-data.scm (call-with-values): Fixed the bug of (call-with-values (lambda () (values 1 2)) cons).
